--- a/mods/storage-delight.pw.toml
+++ b/mods/storage-delight.pw.toml
@@ -1,13 +1,13 @@
 name = "Storage Delight - Farmer's Delight"
-filename = "storagedelight-1.1.1-1.20.1-forge.jar"
+filename = "storagedelight-2024.07.23-1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/AHvuXNcv/storagedelight-1.1.1-1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/LTTvOp5L/versions/7upKP7jR/storagedelight-2024.07.23-1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "9ae73f34f6f28a7d0269d639a3eb45edd77b79f0"
+hash = "66394d73b5aef026698ad9f62e5d0ee65a6e1c70"
 
 [update]
 [update.modrinth]
 mod-id = "LTTvOp5L"
-version = "AHvuXNcv"
+version = "7upKP7jR"
