--- a/mods/delightful.pw.toml
+++ b/mods/delightful.pw.toml
@@ -1,13 +1,13 @@
 name = "Delightful"
-filename = "Delightful-1.20.1-3.5.8.jar"
+filename = "Delightful-1.20.1-3.5.9.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/JtSnhtNJ/versions/1mJHBnkb/Delightful-1.20.1-3.5.8.jar"
+url = "https://cdn.modrinth.com/data/JtSnhtNJ/versions/E2BNWtJP/Delightful-1.20.1-3.5.9.jar"
 hash-format = "sha1"
-hash = "5eb594a53564b5cdda6b4ab5cdc923550722dd31"
+hash = "b6cd314e7912a82dc7d7cc5720d4b9ad4827b25f"
 
 [update]
 [update.modrinth]
 mod-id = "JtSnhtNJ"
-version = "1mJHBnkb"
+version = "E2BNWtJP"
