--- a/mods/tectonic.pw.toml
+++ b/mods/tectonic.pw.toml
@@ -1,13 +1,13 @@
 name = "Tectonic"
-filename = "tectonic-forge-1.19.3-2.3.5.jar"
+filename = "tectonic-forge-1.19.3-2.3.5a.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lWDHr9jE/versions/eEELb8Hk/tectonic-forge-1.19.3-2.3.5.jar"
+url = "https://cdn.modrinth.com/data/lWDHr9jE/versions/rktqBfn4/tectonic-forge-1.19.3-2.3.5a.jar"
 hash-format = "sha1"
-hash = "103918e9f142e69524c34398ad42d14ee39a2fcd"
+hash = "25c603e099928ad75c2020b351fe448f1dd68e44"
 
 [update]
 [update.modrinth]
 mod-id = "lWDHr9jE"
-version = "eEELb8Hk"
+version = "rktqBfn4"
