--- a/mods/garnished-kubejs.pw.toml
+++ b/mods/garnished-kubejs.pw.toml
@@ -1,13 +1,13 @@
 name = "Garnished KubeJS"
-filename = "garnished_kubejs-0.2+1.20.1-neoforged.jar"
+filename = "garnished_kubejs-0.2.1+1.20.1-neoforged.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rspAgyfe/versions/efaDQcvG/garnished_kubejs-0.2%2B1.20.1-neoforged.jar"
+url = "https://cdn.modrinth.com/data/rspAgyfe/versions/L7G3qapC/garnished_kubejs-0.2.1%2B1.20.1-neoforged.jar"
 hash-format = "sha1"
-hash = "06d1429ad5b7c77635b50884a43cf238cef32118"
+hash = "be3051a51fc3339d394dd85067836032be80f2df"
 
 [update]
 [update.modrinth]
 mod-id = "rspAgyfe"
-version = "efaDQcvG"
+version = "L7G3qapC"
