--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-forge-15.8.2.23.jar"
+filename = "jei-1.20.1-forge-15.8.2.25.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/Cusxujd8/jei-1.20.1-forge-15.8.2.23.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/C7nTY0fi/jei-1.20.1-forge-15.8.2.25.jar"
 hash-format = "sha1"
-hash = "e0800142bb585242650170736f29944bf3ba2dbf"
+hash = "8e2d75cc7935e0366651087e9892050d0ffca52a"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "Cusxujd8"
+version = "C7nTY0fi"
