--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -16,32 +16,18 @@
   // Items here will be unusable completely
   //    Example: minecraft:diamond
   blacklisted_items: [
-    "immersiveengineering:armor_piercing",
-    "immersiveengineering:buckshot",
+    "!immersiveengineering:(armor_piercing|buckshot|casull|chemthrower|dragons_breath|he|homing|potion|silver|flare|firework|wolfpack|firework)",
+    "!immersiveengineering:(railgun|revolver)",
+    "!immersiveengineering:gunpart_.*",
+    "!immersiveengineering:toolupgrade_(railgun|revolver|chemthrower)_.*",
+    "!immersiveengineering:turret_.*",
+    "!protection_pixel:pneumatic.*",
+    "!tfmg:.*_grenade",
+    "!thermal:.*_grenade",
     "immersiveengineering:casull",
-    "immersiveengineering:chemthrower",
-    "immersiveengineering:dragons_breath",
-    "immersiveengineering:he",
-    "immersiveengineering:homing",
-    "immersiveengineering:potion",
-    "immersiveengineering:railgun",
+    "immersiveengineering:mold_bullet_casing",
     "immersiveengineering:silver",
-    "immersiveengineering:wolfpack",
-    "tfmg:copper_grenade",
-    "tfmg:napalm_bomb",
-    "tfmg:zinc_grenade",
-    "thermal:earth_grenade",
-    "thermal:ender_grenade",
-    "thermal:explosive_grenade",
-    "thermal:fire_grenade",
-    "thermal:glowstone_grenade",
-    "thermal:ice_grenade",
-    "thermal:lightning_grenade",
-    "thermal:nuke_grenade",
-    "thermal:phyto_grenade",
-    "thermal:phyto_grenade",
-    "thermal:redstone_grenade",
-    "thermal:thermite_grenade",
+    "immersiveengineering:speedloader",
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
