--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -16,7 +16,7 @@
   // Items here will be unusable completely
   //    Example: minecraft:diamond
   blacklisted_items: [
-    "!immersiveengineering:(casull|armor_piercing|buckshot|he|silver|dragons_breath|potion|flare|firework|homing|wolfpack)"
+    "!immersiveengineering:(casull|armor_piercing|buckshot|he|silver|dragons_breath|potion|flare|firework|homing|wolfpack)",
     "!immersiveengineering:(railgun|revolver)",
     "!immersiveengineering:gunpart_.*",
     "!immersiveengineering:toolupgrade_(railgun|revolver|chemthrower)_.*",
