--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -26,6 +26,7 @@
     "!tfmg:napalm_.*",
     "!thermal:.*_grenade",
     "immersiveengineering:mold_bullet_casing",
+    "immersiveengineering:speedloader",
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
