--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI Loot"
 filename = "emi_loot-0.6.6+fix3+1.20.1+forge.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/ZkDaJFMU/emi_loot-0.6.6%2Bfix3%2B1.20.1%2Bforge.jar"
