--- a/mods/copycats.pw.toml
+++ b/mods/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "copycats-2.0.5+mc.1.20.1-forge.jar"
+filename = "copycats-2.1.2+mc.1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/H8ITJISV/copycats-2.0.5%2Bmc.1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/zyXQ6jAy/copycats-2.1.2%2Bmc.1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "688680d09b12282314ee35ede28c69ab963fa62f"
+hash = "74ae3b05fa0fcc2b3f252e1748432fe0bf3fcf72"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "H8ITJISV"
+version = "zyXQ6jAy"
