--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-forge-15.8.2.25.jar"
+filename = "jei-1.20.1-forge-15.10.0.29.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/C7nTY0fi/jei-1.20.1-forge-15.8.2.25.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/eqQXhmDe/jei-1.20.1-forge-15.10.0.29.jar"
 hash-format = "sha1"
-hash = "8e2d75cc7935e0366651087e9892050d0ffca52a"
+hash = "24b341f587aab88323911aa8b3056694197d3369"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "C7nTY0fi"
+version = "eqQXhmDe"
