--- a/mods/storagedrawers.pw.toml
+++ b/mods/storagedrawers.pw.toml
@@ -1,13 +1,13 @@
 name = "Storage Drawers"
-filename = "storagedrawers-1.20.1-12.0.3.jar"
+filename = "StorageDrawers-1.20.1-12.0.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/guitPqEi/versions/HxmL9PcX/storagedrawers-1.20.1-12.0.3.jar"
+url = "https://cdn.modrinth.com/data/guitPqEi/versions/F9JE95rC/StorageDrawers-1.20.1-12.0.4.jar"
 hash-format = "sha1"
-hash = "ea5d343239fddf815ad44bee5a2d0dc2503f9cfb"
+hash = "a2f2c402f7f234e6c93c0a7ed75a2da83b819305"
 
 [update]
 [update.modrinth]
 mod-id = "guitPqEi"
-version = "HxmL9PcX"
+version = "F9JE95rC"
